--- a/prj_stl.css
+++ b/prj_stl.css
@@ -4,7 +4,7 @@ p {
 }
 
 body {
-	background:url(Eikones/green.jpg) no-repeat;
+	background:url(Eikones/Eikona1.jpg) no-repeat;
 	background-size: 100%;
 	color: black;
 }
