--- a/prj_stl.css
+++ b/prj_stl.css
@@ -34,6 +34,11 @@ li a {
   text-decoration: none;
 }
 
+h2,h3 {
+	text-align: center;
+	font-family:Georgia;
+}
+
 li a:hover:not(.active) {
   background-color: #111;
 }
